# qiita_zenn_sendmail

./: .env.template  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: daily_summary.yml  main.yml  test.yml
src/: fetch_content.py  fetch_trends.py  format_email.py  send_email.py  summarize.py
